--- a/login.html
+++ b/login.html
@@ -50,7 +50,7 @@
         </div>
       </div>
   </nav>
-  
+
     <main class="container">
       <section id="login">
         <h1 class="text-center my-5">Login de usuario</h1>
@@ -61,7 +61,7 @@
                 <input type="text" name="nombre" id="login-nombre" class="form-control my-1">
                 <label for="password" class="form-label">password</label>
                 <input type="password" name="password" id="login-password" class="form-control my-1" >
-                <button type="submit" class="btn btn-primary">Loguear</button>
+                <button type="submit" class="btn btn-primary">Ingresar</button>
                 <button type="reset" class="btn btn-warning">Limpiar</button>
             </form>
         </section>
