--- a/cart.html
+++ b/cart.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="ES">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Producto</title>
+    <title>Carro de compra</title>
     <link rel="shortcut icon" href="./assets/img/pizza_icon_131067.ico">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link href="//cdn.jsdelivr.net/npm/@sweetalert2/theme-dark@4/dark.css" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/styles.css">
 </head>
 <body class="text-bg-info">
-
   <nav class="navbar fixed-top navbar-expand-lg">
     <div class="container-fluid">
       <a class="navbar-brand" href="./index.html"><img src="./assets/img/pizza_icon_131067.ico" alt="icono">LA PIZZERIA</a>
@@ -56,29 +55,65 @@
     </div>
 </nav>
 
-    <div class="container text-center detalle-producto" >
- 
-    </div>
+
+    <section class="container">
+        <div class="row">
+            <div class="col-sm-12 col-md-8">
+                <h3>CARRITO DE COMPRAS</h3>
+                <h5 id="cantidad-pdcto"></h5>
+            </div>
+            <div class="col-sm-12 col-md-4">
+                <button class="btn btn-danger" id="btn-vaciar">Vaciar Carro</button>
+            </div>
+        </div>
+        <div class="row">            
+            <div class="col" id="productos-carrito">
+                
+            </div>
+        </div>
+        <div class="row">            
+            <div class="col-sm-12 col-md-8">
+                <form action="" method="get">
+                    <label for="cupon">Cupón de descuento</label>
+                    <input type="" id="input-cupon">
+                    <input type="button" value="aplicar" class="btn btn-primary" id="btn-descuento">
+                </form>
+            </div>
+            <div class="col-sm-12 col-md-4">
+                <p id="subtotal" class="text-secondary"></p>
+                <p id="descuento" class="text-success"></p>
+                <h5 id="precio-total"></h5>
+            </div>
+        </div>
+        <div class="row">            
+            <div class="col-sm-6 col-md-8">
+                <button class="btn btn-warning"><a href="./index.html">continuar comprando</a></button>
+            </div>
+            <div class="col-sm-6 col-md-4">
+                <button class="btn btn-primary">Finalizar compra</button>
+            </div>
+        </div>
+        <div class="row"></div>
+    </section>
 
     <footer id="pie-de-pagina">
-      <div>
-        <p>© 2022 LA PIZZERIA</p>
-      </div>
-      <nav>
-        <ul>
-          <li><a href="./default.html">Términos</a></li>
-          <li><a href="./default.html">Privacidad</a></li>
-          <li><a href="./default.html">Seguridad</a></li>
-          <li><a href="./contacto.html">Contacto</a></li>
-        </ul>
-      </nav>
+        <div>
+          <p>© 2022 LA PIZZERIA</p>
+        </div>
+        <nav>
+          <ul>
+            <li><a href="./default.html">Términos</a></li>
+            <li><a href="./default.html">Privacidad</a></li>
+            <li><a href="./default.html">Seguridad</a></li>
+            <li><a href="./contacto.html">Contacto</a></li>
+          </ul>
+        </nav>
     </footer>
 
-    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.3.js" integrity="sha256-nQLuAZGRRcILA+6dMBOvcRh5Pe310sBpanc6+QBmyVM=" crossorigin="anonymous"></script>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.js"></script>
     <script src="./assets/js/login.js"></script>
-    <script src="./assets/js/productoScript.js"></script>
+    <script src="./assets/js/cart-app.js"></script>  
 </body>
 </html>
