--- a/cart.html
+++ b/cart.html
@@ -87,10 +87,10 @@
         </div>
         <div class="row">            
             <div class="col-sm-6 col-md-8">
-                <button class="btn btn-warning"><a href="./index.html">continuar comprando</a></button>
+                <button class="btn btn-warning my-1"><a href="./index.html">continuar comprando</a></button>
             </div>
             <div class="col-sm-6 col-md-4">
-                <button class="btn btn-primary">Finalizar compra</button>
+                <button class="btn btn-primary my-1">Finalizar compra</button>
             </div>
         </div>
         <div class="row"></div>
